# maccleaner

./: Cargo.toml  README.md
src/: cleaner.rs  main.rs  targets.rs  ui.rs  utils.rs
