[package]
name = "maccleaner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "2.3.1"
colored = "2.0.0"
console = "0.16.2"
dialoguer = "0.12.0"
jwalk = "0.8.1"
libc = "0.2.180"
walkdir = "2.5.0"
